app.properties initial setup

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.application.name=socialscape
 spring.datasource.url=jdbc:mysql://localhost:3306/socialscape
 spring.datasource.username=socialscape
 spring.datasource.password=socialscape
+
+# Warning messages in terminal
+spring.main.banner-mode=off
+logging.level.root=warn
+
+# Log SQL statements
+logging.level.org.hibernate.SQL=trace
+
+# log values for SQL statements
+logging.level.org.hibernate.orm.jdbc.bind=trace
